# torch-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: rust.yml
demo/: MLP.rs  linear_regression.rs
search.desc/torch_rs/: torch_rs-desc-0-.js
src/: functional.rs  lib.rs  main.rs  tensor.rs  utils.rs
src/F/: mod.rs
src/autograd/: mod.rs  op.rs
src/nn/: linear.rs  mod.rs  relu.rs  sequential.rs
src/ops/: add.rs  matmul.rs  mean.rs  mod.rs  mul.rs  relu.rs
src/optimizer/: SGD.rs  mod.rs
src/tensor/: mod.rs
src/torch_rs/: functional.rs.html  lib.rs.html  tensor.rs.html  utils.rs.html
src/torch_rs/autograd/: mod.rs.html
src/torch_rs/nn/: linear.rs.html  mod.rs.html  relu.rs.html  sequential.rs.html
src/torch_rs/ops/: add.rs.html  matmul.rs.html  mean.rs.html  mod.rs.html  mul.rs.html  relu.rs.html
tests/: add.rs  autograd.rs  linear.rs  matmul.rs  mul.rs  tensor.rs
torch_rs/: all.html  index.html  sidebar-items.js
torch_rs/autograd/: index.html
torch_rs/functional/: fn.mse_loss.html  fn.relu.html  index.html  sidebar-items.js
torch_rs/nn/: index.html  sidebar-items.js  trait.Module.html
torch_rs/ops/: index.html  sidebar-items.js  trait.Op.html
torch_rs/optimizer/: index.html  sidebar-items.js  trait.Optimizer.html
torch_rs/tensor/: index.html  sidebar-items.js  struct.Tensor.html  struct.TensorData.html
torch_rs/utils/: index.html  sidebar-items.js  struct.DataLoader.html  struct.TensorDataset.html  trait.Dataset.html
(+40 files in other folders)
