[package]
name = "torch-rs"
version = "0.0.1"
edition = "2024"
authors = ["Lin Letian <yingziyu-Lin@outlook.com>"]
description = "PyTorch-like deep learning framework in Rust"
license = "MIT OR Apache-2.0"


[dependencies]
rand_distr = "0.4.3"    # 使用明确的版本号
ndarray-rand = "0.14.0"
ndarray = "0.15.6"
